# reef-sfm-mote-keys

./: .gitignore  README.md  project-plan.md  pyproject.toml  reef-sfm-mote-keys.ipynb  references.bib
config/: aws-config.sh  aws-config.sh.template  ssh-config.snippet
docs/: 04-data-acquisition.md  05-metashape-processing.md  aws-resources.md  aws-setup.md  downloads.md  ec2-bootstrap.md
docs/decisions/: 0000-index.md  0001-amazon-dcv-not-nice-dcv.md  0001-provenance-package-as-installable-module.md  0002-metashape-pinned-2-3-1.md  0002-no-sciencebasepy-dependency.md  0003-sciencebase-api-primary-manifest-csv-fallback.md  0003-trial-activation-isolated.md  0004-qgis-from-ltr-repo.md  0004-validation-constants-from-metadata-file.md  0005-bundled-metashape-python.md  0005-four-level-severity-with-unverified.md  0006-exiftool-optional-batched-subprocess.md  0007-gps-rule-expects-single-surface-fix.md  0008-ids-viewer-csv-export-primary-acquisition-path.md  0009-exif-csv-and-tiff-encoding-metadata-loss.md  0010-adopt-toth-usgs-metashape-workflow.md  0011-validator-hardcoded-now-profile-driven-later.md  0012-smoke-ab-rms-in-filter-units-not-pixels.md  0013-confidence-noise-filter-via-cleanpointcloud.md  0014-headless-confidence-filter-via-docpopi-pattern.md  0015-headless-step13-engineered-departure.md  0016-builddem-extent-beyond-pcextent-smoke-bbox-clip.md  0017-esm-step-4-image-quality-and-production-wiring.md  README.md  STANDING-DECISIONS.md
notebooks/: 04_intake_inventory.ipynb
scripts/: 04_acquire_and_validate.sh  manifest_from_ids_export.py  monitor.sh
scripts/aws/: 00-prereqs.sh  01-create-network.sh  02-create-storage.sh  03-create-launch-template.sh  04-launch-instance.sh  05-first-boot-setup.sh  README.md  (+5 more)
tests/: conftest.py  test_acquisition.py  test_intake_report.py  test_inventory.py  test_validate_intake.py  test_validation.py
(+46 files in other folders)
