[project]
name = "reef-sfm-mote-keys"
version = "0.1.0"
description = "Reproducible reimplementation of the USGS/Mote restoration SfM pipeline (Toth et al. 2025) on the Eastern Dry Rocks site, with a provenance and QC layer for metric reconciliation against published targets."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Velez F." }
]
license = { text = "MIT" }
dependencies = [
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "pandas>=2.2",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "pillow>=11.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reef_sfm_qc"]

[tool.uv]
# Dev tooling lives here as we add it (pytest, ruff, etc.) — kept empty for Layer 1.
dev-dependencies = []
