[project]
name = "reef-sfm-mote-keys"
description = "Reproducible reimplementation of the USGS/Mote restoration SfM pipeline (Toth et al. 2025) on the Eastern Dry Rocks site, with a provenance and QC layer for metric reconciliation against published targets."
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    { name = "Velez F." }
]
license = { text = "MIT" }
dependencies = [
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "pandas>=2.2",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "pillow>=11.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.scripts]
reef-sfm = "reef_sfm_provenance.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reef_sfm_provenance", "src/reef_sfm_qc"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
